<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">老伴</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="view_room">请选择房间：</string>
    <string name="commit">确认</string>
    <string name="chooice">选择护工</string>
    <string name="logout">退出房间</string>
    <string name="setting">设置</string>
	 <string name="current_situation">当前状态：</string>
    <string name="device">设备：</string>
    <string name="elder">老人：</string>
    <string name="searchDevices">搜索设备</string>
    <string name="unbind">解除</string>
    <string name="selectelder">绑定老人</string>
    <string name="selectitem">绑定项目</string>
    <string name="bind_btn">绑定</string>
    <string name="item">项目：</string>
    <string name="start">启动</string>
    <string name="bindBluetooth">配对</string>
    <string name="back">返回</string>
    <!-- preferences -->
    
    <string name="avatar">Avatar</string>
    <string name="empty"></string>
    <string name="submit">提交</string>
    <string name="undo">撤销</string>
    <string name="label_username">用户名</string>
    <string name="label_password">密码</string>
    <string name="label_sign_in">请点击登录</string>
    <string name="label_logout">注销登录</string>
    <string name="label_exit">退出程序</string>
    <string name="label_settings">基本设定</string>
    <string name="label_refresh">刷新</string>
    <string name="label_nav_button_elder_item">老人服务</string>
    <string name="label_nav_button_area_item">房间服务</string>
    <string name="label_clear">清除数据</string>
    <string name="label_clear_elders">清除老人信息</string>
    <string name="label_clear_elder_items">清除护理项目</string>
    <string name="label_clear_elder_records">清除护理记录</string>
   
    <string name="label_overdue_item">过期项目</string>
    <string name="label_current_item">当前项目</string>
    <string name="label_future_item">今日项目</string>
    <string name="label_unknown_item">其他项目</string>
    
    <string name="message_signing_in">正在登陆</string>
    <string name="signup_link">无法登录？请 &lt;a href=http://www.androidbootstrap.com>点击&lt;/a> 注册.</string>
    <string name="message_bad_credentials">Username or Password is incorrect</string>
    <string name="message_auth_failed">Please enter a valid password</string>
    <string name="message_auth_failed_new_account">Please enter a valid username &amp; password</string>
    
    <string name="message_fetch_data">正在获取数据</string>
    <string name="message_fetch_elder_data">正在获取老人数据</string>
    <string name="message_fetch_carer_data">正在获取护工数据</string>
    <string name="message_fetch_careitem_data">正在获取护理项目数据</string>
    <string name="message_fetch_areaitem_data">正在获取房间项目数据</string>
    <string name="message_post_careitem_data">正在提交护理项目数据</string>
    <string name="message_post_areaitem_data">正在提交房间项目数据</string>
    <string name="message_clear_data">正在清除数据</string>
    
    <string name="message_upload_success">提交成功了哦!</string>
    <string name="message_upload_failed">出错了，哎呀!</string>
    <string name="message_no_carer">无法获取护工，请先排班</string>
    <string name="text_get_carer_failed">没有值班护工</string>
    <string name="message_software_update">有新的软件包哦，快下载吧～</string>
    
</resources>
