<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.initdemo.MainActivity" >

	<item
        android:id="@+id/goto_refresh"
        android:orderInCategory="1"
        android:title="@string/label_refresh"
        android:icon="@drawable/actionbar_spinner"
        app:showAsAction="ifRoom">
           
    </item>
    <!--  item
        android:id="@+id/goto_crash"
        android:title="@string/label_refresh"
        android:icon="@drawable/ic_launcher"
        app:showAsAction="ifRoom">
           
    </item-->

    <item
        android:id="@+id/goto_settings"
        android:orderInCategory="1"
        android:title="@string/label_settings"
        android:icon="@drawable/ic_launcher"
        app:showAsAction="never" >
    </item>
	<item
        android:id="@+id/goto_logout"
        android:orderInCategory="1"
        android:title="@string/label_logout"
        android:icon="@drawable/ic_launcher"
        app:showAsAction="never" >
    </item>
	<item
        android:id="@+id/goto_quit"
        android:orderInCategory="1"
        android:title="@string/label_exit"
        android:icon="@drawable/ic_launcher"
        app:showAsAction="never"/>
</menu>