<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >
    <TextView
    	android:layout_width="0dip"
    	android:layout_weight="3"
    	android:gravity="center"
    	android:layout_height="wrap_content"
    	android:text="@string/device" />
    	
    <TextView
    	android:layout_width="0dip"
    	android:layout_weight="3"
    	android:layout_height="wrap_content"
    	android:gravity="center"
    	android:text="@string/selectelder" />
    	
    <TextView
    	android:layout_width="0dip"
    	android:layout_weight="3"
    	android:layout_height="wrap_content"
    	android:gravity="center"
    	android:text="@string/selectitem" />
    	
    <TextView
    	android:layout_width="0dip"
    	android:layout_weight="1"
    	android:layout_height="wrap_content"
    	android:gravity="center"
    	/>
    

</LinearLayout>
